everything but favorites

--- a/apps/login_registration_app/templates/login_registration_app/dashboard.html
+++ b/apps/login_registration_app/templates/login_registration_app/dashboard.html
@@ -12,15 +12,17 @@
 	<h1>Welcome, {{request.session.user_alias}}</h1>
 	<div id="quote_container" class="column">
 		<h3>Quotable Quotes</h3>
+		{% for quote in quotes %}
 		<div class="quote">
-			<p>SOMEQUOTES</p>
+			<p><span class="bold">{{quote.author}}</span> {{quote.text}}</p>
 			<div class="author_button">
-				<p>Posted by <a href="">SOMEAUTHOR</a></p>
+				<p>Posted by <a href="/users/{{request.session.user_id}}">{{quote.user.alias}}</a></p>
 				<form>
 					<input type="submit" value="Add to My List">
 				</form>
 			</div>
 		</div>
+		{% endfor %}
 	</div>
 	<div class="column">
 		<div id="favorite" class="right">
