--- a/apps/login_registration_app/templates/login_registration_app/user_info.html
+++ b/apps/login_registration_app/templates/login_registration_app/user_info.html
@@ -8,7 +8,7 @@
 <body>
 	<nav>
 		<a href="/quotes">Dashboard</a> | 
-		<a href="">Logout</a>
+		<a href="/users/logout">Logout</a>
 	</nav>
 	<h3>Posts by {{user.alias}}</h3>
 	<h3>Count: {{numb_of_quotes}}</h3>
